# CPP-Project-Template

./: .gitignore  CMakeLists.txt
include/: example.h
src/: example.cc
